@@ -24,6 +24,7 @@
  */
 
 #import "_WKRemoteWebInspectorViewControllerPrivate.h"
+#import <wtf/RefPtr.h>
 
 #if !TARGET_OS_IPHONE
 
